<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    style="?pageBackground"
    tools:context="ua.andriyantonov.tales.Settings">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/chooseThemeText"
        android:text="@string/chooseThemeText"
        android:layout_centerHorizontal="true"
        style="?textTitle"/>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/rg"
        android:layout_below="@+id/chooseThemeText"        >
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/chooseThemeDay"
            android:text="@string/chooseThemeDayText"
            android:onClick="onClickTheme"
            android:checked="true"
            style="?textRegular"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/chooseThemeNight"
            android:text="@string/chooseThemeNightText"
            android:onClick="onClickTheme"
            style="?textRegular"/>
        </RadioGroup>

</RelativeLayout>
